derste  yapılanlar eklendi

--- a/exercises/exercise1.ipynb
+++ b/exercises/exercise1.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "bd94655f",
    "metadata": {},
    "outputs": [
@@ -35,12 +35,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Listede 12 eleman var.\n"
+      "Liste boş!\n"
      ]
     }
    ],
    "source": [
-    "lst = [1, 4, 5, 7, 7, 8, 15, 16, 25, 29, 35, 72]\n",
+    "lst = []\n",
     "\n",
     "\n",
     "def eleman_sayisi(lst):\n",
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "dbe60cf1",
    "metadata": {},
    "outputs": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "efd8d341",
    "metadata": {},
    "outputs": [
@@ -118,13 +118,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Duyarlı sonuç: {'V': 1, 'e': 1, 'r': 1, 'i': 7, 'B': 1, 'l': 1, 'm': 2, 'E': 1, 'ğ': 1, 't': 1}\n",
-      "Duyarsız sonuç: {'v': 1, 'e': 2, 'r': 1, 'i': 7, 'b': 1, 'l': 1, 'm': 2, 'ğ': 1, 't': 1}\n"
+      "Duyarlı sonuç: {'V': 1, 'e': 1, 'r': 1, 'i': 8, 'B': 1, 'l': 1, 'm': 2, 'E': 1, 'ğ': 1, 't': 1}\n",
+      "Duyarsız sonuç: {'v': 1, 'e': 2, 'r': 1, 'i': 8, 'b': 1, 'l': 1, 'm': 2, 'ğ': 1, 't': 1}\n"
      ]
     }
    ],
    "source": [
-    "metin = \"VeriBilimiEğitimi\"  # Üzerinde işlem yapılacak metin\n",
+    "metin = \"VeriBilimiEğitimii\"  # Üzerinde işlem yapılacak metin\n",
     "\n",
     "def karakter_sayaci(metin, buyuk_kucuk_duyarli=True):\n",
     "   \n",
