--- a/lesson2.ipynb
+++ b/lesson2.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "ea776a64",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import requests\n",
-    "from html.parser import HTMLParser"
+    "import requests;\n",
+    "from html.parser import HTMLParser\n",
+    "\n"
    ]
   },
   {
